[workspace]
members = [
    "src/rust/vlcrs-core",
    "src/rust/vlcrs-macros",
    "src/rust/vlcrs-messages",
    "src/rust/vlcrs-utils",
]
resolver = "2"

[workspace.package]
version = "4.0.0"
license = "LGPL-2.1-or-later"

[workspace.dependencies]
vlcrs-core = { path = "./vlcrs-core" }
vlcrs-macros = { path = "./vlcrs-macros" }
