[workspace]
members = [
    "src/rust/vlcrs-core",
    "src/rust/vlcrs-macros",
    "src/rust/vlcrs-messages",
    "src/rust/vlcrs-utils",
    "modules/logger/telegraf-rs/"
]
resolver = "2"
exclude = ["contrib"]

[workspace.package]
version = "4.0.0"
license = "LGPL-2.1-or-later"

[workspace.dependencies]
vlcrs-core = { path = "src/rust/vlcrs-core" }
vlcrs-macros = { path = "src/rust/vlcrs-macros" }
